# agent-shield

./: .dockerignore  .gitignore  BENCHMARKS.md  Dockerfile  LICENSE  README.md  amber-manifest.json5  pyproject.toml
.github/workflows/: docker-publish.yml
data/: rag_kb.json  rag_kb.npz
data/knowledge/: _gen_cultural.py  _gen_regulatory.py  cultural.jsonl  ethics.jsonl  medical.jsonl  regulatory.jsonl  safe_categories.jsonl
docs/: blue_team_defense_playbook.md  competition_intel.md  lambda_vllm_setup.md  red_team_s_tier_playbook.md  remaining_vulnerabilities.md  three_theory_27grid.md
docs/status/: benchmark_results.md
scripts/: a2a_dry_run.py  a2a_stress_test.py  build_rag_kb.py  export_onnx.py  verify_multilingual.py
src/agent_shield/: __init__.py  destruction.py  exfiltration.py  git_safety.py  injection.py  secrets.py  types.py
src/agent_shield/a2a/: __init__.py  agent.py  attack_executor.py  cognitive_features.py  dynamic_balance.py  embedding_riverbed.py  preprocessor.py  rag_retriever.py  red_team_engine.py  riverbed.py  security_auditor.py  server.py  task_router.py  threat_modeler.py  vuln_analyzer.py
src/agent_shield/a2a/clusters/: template_banks.npz
tests/: fp_stress_wave1.py  fp_stress_wave2.py  red_team_round6.py  red_team_round7.py  red_team_wave1.py  red_team_wave2.py  red_team_wave3.py  red_team_wave4.py  test_27grid_ablation.py  test_a2a.py  test_attack_executor_generic.py  test_exam_encoding_attacks.py  test_exam_novel_jailbreak.py  test_exam_semantic_attacks.py  test_false_positive_comprehensive.py  test_final_exam.py  test_fp_competition_utility.py  test_fp_v19_fiction_regression.py  test_fp_v19_pharma_regression.py  test_l3_baseline_s_tier.py  test_l3_encoding_attacks.py  test_l3_multiturn_ambush.py  test_l3_social_engineering.py  test_l3_soft_attacks.py  test_rag_retriever.py  test_red_team_benchmark_attacks.py  test_red_team_cognitive_gaps.py  test_red_team_comprehensive.py  test_red_team_cross_layer.py  test_red_team_deberta_evasion.py  test_red_team_encoding_bypass.py  test_red_team_exam_encoding.py  test_red_team_exam_semantic.py  test_red_team_exam_structural.py  test_red_team_l1_template_gaps.py  test_red_team_l2_multiturn_evasion.py  test_red_team_l3a_safe_category_abuse.py  test_red_team_l5_output_bypass.py  test_red_team_lambda_competition.py  test_red_team_lambda_edge.py  (+14 more)
