[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-shield"
version = "0.2.0"
description = "Universal AI agent safety guardrails + A2A competition agent"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "AI King (Wang Chen-Syuan)", email = "me@ai-king.dev" },
]
keywords = [
    "ai-safety",
    "agent",
    "guardrails",
    "security",
    "llm",
    "prompt-injection",
    "a2a",
    "agentbeats",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.optional-dependencies]
a2a = ["anthropic>=0.40", "openai>=1.0"]

[project.scripts]
agent-shield-server = "agent_shield.a2a.server:main"

[project.urls]
Homepage = "https://github.com/AIKing9319/agent-shield"
Repository = "https://github.com/AIKing9319/agent-shield"
Issues = "https://github.com/AIKing9319/agent-shield/issues"

[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
